--- a/Tyuiu.ZairovAR.Sprint1.Task0.V26.Test/Tyuiu.ZairovAR.Sprint1.Task0.V26.Test.csproj
+++ b/Tyuiu.ZairovAR.Sprint1.Task0.V26.Test/Tyuiu.ZairovAR.Sprint1.Task0.V26.Test.csproj
@@ -49,16 +49,16 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="DataServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.ZairovAR.Sprint1.Task0.V0.Lib\Tyuiu.ZairovAR.Sprint1.Task0.V0.Lib.csproj">
+    <ProjectReference Include="..\Tyuiu.ZairovAR.Sprint1.Task0.V26.Lib\Tyuiu.ZairovAR.Sprint1.Task0.V26.Lib.csproj">
       <Project>{237a1984-93cb-4ac6-aa19-224ed1405500}</Project>
-      <Name>Tyuiu.ZairovAR.Sprint1.Task0.V0.Lib</Name>
+      <Name>Tyuiu.ZairovAR.Sprint1.Task0.V26.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
